--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
+<html lang="pt-BR">
+
+<head>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
+        rel="stylesheet">
+    <title>Bora bill jogos </title>
+</head>
+
+<body>
+    <header>PLAY JOGOS</header>
+
+    <section class="chamada">
+        <div class="chamada-texto">
+            <h1>Blood strike</h1>
+            <p>jogos de tiro</p>
+        </div>
+
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OIs16UbfEqo?si=N4huYLZNy9F2mpBy"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section class="categoria">
+        <h2>Blood strike</h2>
+        <div class="categoria-videos">
+            <a href="https://www.youtube.com/embed/gJMysoYp9Sg?si=1PAwODj9MFWHrVGk">
+                <img src="https://i.ytimg.com/an_webp/gJMysoYp9Sg/mqdefault_6s.webp?du=3000&sqp=CIibmsMG&rs=AOn4CLDIJeCsrB11nB-8mP0ay4B3OZekpA" />
+            </a>
+            <a href="https://www.youtube.com/embed/j4HhhEWPdTc?si=1VMwUY1opKPpH_3Y">
+                <img src="https://i.ytimg.com/an_webp/j4HhhEWPdTc/mqdefault_6s.webp?du=3000&sqp=CJucmsMG&rs=AOn4CLCDpR227Lio0wTAPLR_9C78UDP87Q" />
+            </a>
+            <a href="https://www.youtube.com/embed/kT6NkyiuaRA?si=qsHMMZ0cojNQLKGu">
+                <img src="https://i.ytimg.com/an_webp/kT6NkyiuaRA/mqdefault_6s.webp?du=3000&sqp=COCZmsMG&rs=AOn4CLCRqKVa8kvOl2RmexWtvC45eKx12Q" />
+            </a>
+            <a href="https://www.youtube.com/embed/3MUA2QCioi4?si=yTzXLEZzWsa1NCHM%22">
+                <img src="https://i.ytimg.com/an_webp/3MUA2QCioi4/mqdefault_6s.webp?du=3000&sqp=CKD0mcMG&rs=AOn4CLCvC-YsMLPGrfTr8QRiFZ-31H8pRA" />
+            </a>
+            <a href="https://www.youtube.com/embed/AXHqFInrIGM?si=jSSF64ldkC6haZuj">
+                <img src="https://i.ytimg.com/an_webp/AXHqFInrIGM/mqdefault_6s.webp?du=3000&sqp=CLqemsMG&rs=AOn4CLDPY8J_FVuXcJ-X4nKAq_B3S0ccog" />
+            </a>
+        </div>
+    </section>
+
+</body>
+
+</html>
 
