--- a/<html lang="pt-BR">.html
+++ b/<html lang="pt-BR">.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>PLAYJOGOS</header>
+    <header>Blood strike</header>
 
     <section class="chamada">
         <div class="chamada-texto">
