--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header>PLAY JOGOS</header>
+    <header>JOGOS FPS</header>
 
     <section class="chamada">
         <div class="chamada-texto">
@@ -31,19 +31,19 @@
         <h2>Blood strike</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/embed/gJMysoYp9Sg?si=1PAwODj9MFWHrVGk">
-                <img src="https://i.ytimg.com/an_webp/gJMysoYp9Sg/mqdefault_6s.webp?du=3000&sqp=CIibmsMG&rs=AOn4CLDIJeCsrB11nB-8mP0ay4B3OZekpA" />
+                <img src="https://i.ytimg.com/an_webp/86wSxslTdZo/mqdefault_6s.webp?du=3000&sqp=CKzL0sQG&rs=AOn4CLCr7wK8DEMS123TzskM8YzV4LbO_A" />
             </a>
             <a href="https://www.youtube.com/embed/j4HhhEWPdTc?si=1VMwUY1opKPpH_3Y">
-                <img src="https://i.ytimg.com/an_webp/j4HhhEWPdTc/mqdefault_6s.webp?du=3000&sqp=CJucmsMG&rs=AOn4CLCDpR227Lio0wTAPLR_9C78UDP87Q" />
+                <img src="https://i.ytimg.com/an_webp/AzWaxm4wEqM/mqdefault_6s.webp?du=3000&sqp=CJTh0sQG&rs=AOn4CLBGq1s9Bs9t48rluVZA9tECmLQMvA" />
             </a>
             <a href="https://www.youtube.com/embed/kT6NkyiuaRA?si=qsHMMZ0cojNQLKGu">
-                <img src="https://i.ytimg.com/an_webp/kT6NkyiuaRA/mqdefault_6s.webp?du=3000&sqp=COCZmsMG&rs=AOn4CLCRqKVa8kvOl2RmexWtvC45eKx12Q" />
+                <img src="https://i.ytimg.com/an_webp/PTBruImSGYk/mqdefault_6s.webp?du=3000&sqp=CLzQ0sQG&rs=AOn4CLDPpSz1IR_br22EDTXP4OM7eqgbNw" />
             </a>
             <a href="https://www.youtube.com/embed/3MUA2QCioi4?si=yTzXLEZzWsa1NCHM%22">
-                <img src="https://i.ytimg.com/an_webp/3MUA2QCioi4/mqdefault_6s.webp?du=3000&sqp=CKD0mcMG&rs=AOn4CLCvC-YsMLPGrfTr8QRiFZ-31H8pRA" />
+                <img src="https://i.ytimg.com/an_webp/ViD9JKnjEq0/mqdefault_6s.webp?du=3000&sqp=CKHS0sQG&rs=AOn4CLDMFVan-XnuW4PJOHtGkTU-90j-1A" />
             </a>
             <a href="https://www.youtube.com/embed/AXHqFInrIGM?si=jSSF64ldkC6haZuj">
-                <img src="https://i.ytimg.com/an_webp/AXHqFInrIGM/mqdefault_6s.webp?du=3000&sqp=CLqemsMG&rs=AOn4CLDPY8J_FVuXcJ-X4nKAq_B3S0ccog" />
+                <img src="https://i.ytimg.com/an_webp/POOcDVp2tbo/mqdefault_6s.webp?du=3000&sqp=CPLS0sQG&rs=AOn4CLDykge7tno_A9nIn4c0TDZRacpmQA" />
             </a>
         </div>
     </section>
